# solutions_repo

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: mkdocs.yml
1 Physics/1 Mechanics/Problem_1/: index.html
1 Physics/1 Mechanics/Problem_2/: index.html
1 Physics/2 Gravity/Problem_1/: index.html
1 Physics/2 Gravity/Problem_2/: index.html
1 Physics/2 Gravity/Problem_3/: index.html
1 Physics/3 Waves/Problem_1/: index.html
1 Physics/4 Electromagnetism/Problem_1/: index.html
1 Physics/5 Circuits/Problem_1/: index.html
1 Physics/6 Statistics/Problem_1/: index.html
1 Physics/6 Statistics/Problem_2/: index.html
1 Physics/7 Measurements/Problem_1/: index.html
docs/: index.md  lista2.md  lista3.md  parabola.md  projectile_motion.md  zadania1.md
docs/1 Physics/1 Mechanics/: Problem_1.md  Problem_2.md
docs/1 Physics/2 Gravity/: Problem_1.md  Problem_2.md  Problem_3.md
docs/1 Physics/3 Waves/: Problem_1.md
docs/1 Physics/4 Electromagnetism/: Problem_1.md
docs/1 Physics/5 Circuits/: Problem_1.md
docs/1 Physics/6 Statistics/: Problem_1.md  Problem_2.md
docs/1 Physics/7 Measurements/: Problem_1.md
docs/2 Mathematics/: 2 Analytic_geometry.md
docs/3 Discret_Mathematics/: 6 Sequences_and_Series.md  _09 Recurrence.md  gen.py
search/: search_index.json
site/: 404.html  index.html  search.html
site/Circuits/Problem_1/: index.html
site/Electromagnetism/Problem_1/: index.html
site/Gravity/Problem_1/: index.html
site/Gravity/Problem_2/: index.html
site/search/: search_index.json
(+7 files in other folders)
