[tool.poetry]
name = "solutions-repo"
version = "0.1.0"
description = ""
authors = ["dchorazkiewicz <damian.ch.datascience@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"
mkdocs-macros-plugin = "^1.3.7"
pymdown-extensions = "^10.13"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
mkdocs-mermaid2-plugin = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
